@@ -107,7 +107,8 @@ Changes for 1.7.0
 
 Changes for 1.6.7
 
- - [ZBX-1032] fixed security vulnerability in processing of net.tcp.listen under FreeBSD and Solaris agents (Sasha)
+ - [ZBX-1031] fixed security vulnerability in server, allowing remote unauthenticated users to execute arbitrary SQL queries. Thanks to Nicob (Sasha)
+ - [ZBX-1032] fixed security vulnerability in processing of net.tcp.listen under FreeBSD and Solaris agents. Thanks to Nicob (Sasha)
  - [ZBX-1050] fixed possible windows agent crash while processing big eventlog records (Sasha)
  - [ZBX-991] fixed processing of zabbix[queue] internal check (Sasha)
  - [ZBX-596] fixed support of IPV6 under Windows 2000 (Sasha)
